Alignment issue

--- a/src/App.css
+++ b/src/App.css
@@ -155,7 +155,7 @@ background-color: blue;
 background-color: #f7b769;
 }
 .active-cs{
-background-color: orangered;
+background-color: #f7b769;
 }
 .recovered-c{
 background-color: lightgreen;
